# bandit

./: .gitignore  Cargo.toml  LICENSE  README.md  process_images.py
.cargo/: config.toml
.gemini/: GEMINI.md
.github/workflows/: rust.yaml
examples/: generate.rs  inpaint.rs
python/: inpaint.py  train.py
src/: burn.rs  burnops.rs  imageops.rs  lib.rs  main.rs
src/batch/: average.rs  frequency.rs  mean.rs  median.rs  mod.rs
src/fill/: mod.rs
src/fill/ml/: dip.rs  mod.rs
src/mask/: mod.rs
src/mask/batch/: frequency.rs  mean.rs  median.rs  mod.rs
src/mask/ml/: mod.rs
