[package]
name = "bandit"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
ndarray = "0.16.1"
rustfft = "6.4.1"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
inpaint = { version = "0.1.2", features = ["image"] }
ndrustfft = "0.5.0"
itertools = "0.14.0"
