[package]
name = "bandit"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
ndarray = "0.16.1"
rustfft = "6.4.1"
log = "0.4"
itertools = "0.14.0"
burn = { version = "0.19.1", features = ["autodiff", "cuda"] }

[dev-dependencies]
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
